Bug 1972259 - Skip view transition on page swap. r=nical

This fixes the crash, but it causes the commented out assertion to fire,
probably because the delete op is queued already with the wrong
pipeline, which I think means the snapshots leak.

Bug 1972525 is fixed to re-enable that.

Differential Revision: https://phabricator.services.mozilla.com/D253797